Implemented strategies for nextStage usecase and finishstage usecase, need to fix these two files